; ModuleID = '/home/carl/AnghaBench/libevent/sample/extr_hello-world.c_conn_eventcb.c'
source_filename = "/home/carl/AnghaBench/libevent/sample/extr_hello-world.c_conn_eventcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent = type { i32 }

@BEV_EVENT_EOF = common dso_local global i16 0, align 2
@.str = private unnamed_addr constant [20 x i8] c"Connection closed.\0A\00", align 1
@BEV_EVENT_ERROR = common dso_local global i16 0, align 2
@.str.1 = private unnamed_addr constant [36 x i8] c"Got an error on the connection: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bufferevent*, i16, i8*)* @conn_eventcb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @conn_eventcb(%struct.bufferevent* %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca %struct.bufferevent*, align 8
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  store %struct.bufferevent* %0, %struct.bufferevent** %4, align 8
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %7 = load i16, i16* %5, align 2
  %8 = sext i16 %7 to i32
  %9 = load i16, i16* @BEV_EVENT_EOF, align 2
  %10 = sext i16 %9 to i32
  %11 = and i32 %8, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %27

15:                                               ; preds = %3
  %16 = load i16, i16* %5, align 2
  %17 = sext i16 %16 to i32
  %18 = load i16, i16* @BEV_EVENT_ERROR, align 2
  %19 = sext i16 %18 to i32
  %20 = and i32 %17, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %15
  %23 = load i32, i32* @errno, align 4
  %24 = call i8* @strerror(i32 %23)
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  br label %26

26:                                               ; preds = %22, %15
  br label %27

27:                                               ; preds = %26, %13
  %28 = load %struct.bufferevent*, %struct.bufferevent** %4, align 8
  %29 = call i32 @bufferevent_free(%struct.bufferevent* %28)
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @bufferevent_free(%struct.bufferevent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
